--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/home/mastermmz/Android/Sdk
 flutter.sdk=/home/mastermmz/snap/flutter/common/flutter
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=1.0.3
 flutter.versionCode=3
